force-app/main/default/objects/CareBenefitVerifyRequest/CareBenefitVerifyRequest.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>