force-app/main/default/objects/CareBenefitVerifyRequest/fields/Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Birthdate__c</fullName>
    <formula>MemberPlan.Member.PersonContact.Birthdate</formula>
    <label>Birthdate</label>
    <type>Date</type>
</CustomField>