force-app/main/default/objects/CareBenefitVerifyRequest/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <formula>TEXT( MemberPlan.Member.PersonContact.Gender )</formula>
    <label>Gender</label>
    <type>Text</type>
</CustomField>