force-app/main/default/objects/CareBenefitVerifyRequest/fields/National_Provider_Identifier__c.field-meta.xml
<CustomField>
    <fullName>National_Provider_Identifier__c</fullName>
    <formula>MemberPlan.Payer.National_Provider_Identifier_NPI__c</formula>
    <label>National Provider Identifier</label>
    <type>Text</type>
</CustomField>